--- a/Resources/Private/Partials/Item.html
+++ b/Resources/Private/Partials/Item.html
@@ -6,12 +6,8 @@
 				<div class="employee--image">
 					<f:render partial="Components/Media" section="Picture" arguments="{
 						file: employee.image.0,
-						image: {width: 560, height: 560, cropVariant: 'default'},
-						sizes: {
-							0: {width: 560, height: 560, mediaQuery: '(min-width: 1200px)', cropVariant: 'default'},
-							1: {width: 280, height: 280, mediaQuery: '(min-width: 768px)', cropVariant: 'default'},
-							2: {width: 160, height: 160, mediaQuery: '(min-width: 0px)', cropVariant: 'default'}
-						}
+						image: {width: settings.image.default.width, height: settings.image.default.height, cropVariant: settings.image.default.cropVariant},
+						sizes: settings.image.default.mediaQueries
 					}" />
 				</div>
 			</f:if>
@@ -25,7 +21,6 @@
 			<f:if condition="{employee.position}">
 				<div class="employee--position">{employee.position}</div>
 			</f:if>
-
 		</div>
 	</f:section>
 </div>
